# FSM-Bin-Packing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
aliases/: box013.in.yaml  conveyor002.in.yaml  toss_box1.in.yaml  toss_box2.in.yaml  toss_box3.in.yaml  toss_box4.in.yaml  toss_box5.in.yaml  tote.in.yaml  vi_testbench.in.yaml  workbench.in.yaml
analysis/: main.m  main_local.m
analysis/functions/: MCImport_sim_box_demo.m
analysis/functions/LieGroup_operators/: DualCross.m  H2X_vel.m  H2X_wrench.m  hat.m  vee.m
analysis/functions/tools/: FilteringSE3.m  Plot6DspaceTrajectory.m  Plot6DtimeTrajectory.m  PlotArrows.m  PlotFrame.m  PlotStaticPoseOverTime.m  ReconstructAndFilter.m  averageSE3.m  averageSO3.m  shadedErrorBar.m
analysis/functions/tools/savitzky-golay-filtering-on-so3-main/: SavitzkyGolaySO3.m
analysis/functions/tools/savitzky-golay-filtering-on-so3-main/functions/: sgolayfiltSO3.m
analysis/plotting/: plotFigures.m
analysis/readH5/functions/: geth5dset.m
convex/vi_testbench/: vi_testbench-ch.txt
etc/: FSMSequenceOne.in.yaml
meshes/conveyor002/: Conveyor002_belt.stl
meshes/tote/: tote.stl
meshes/workbench/: workbench_insidepanels.stl  workbench_sidepanels.stl  workbench_toppanels.stl
rsdf/box013/: box013.rsdf
rsdf/box1/: box1.rsdf
rsdf/box2/: box2.rsdf
rsdf/box3/: box3.rsdf
rsdf/box4/: box4.rsdf
rsdf/box5/: box5.rsdf
rsdf/workbench/: workbench.rsdf
scripts/: display.sh  run_mc_rtc.sh
scripts/etc/: display.rviz  display_frames.rviz  simple.yaml
src/: CMakeLists.txt  FSMSequenceOne.cpp  FSMSequenceOne.h  api.h  lib.cpp
src/states/: CMakeLists.txt  FSMSequenceOne_Initial.cpp  FSMSequenceOne_Initial.h  Operation.cpp  Operation.h
src/states/BoxPoses/: poses.csv  poses1real.csv  poses2real.csv  poses2sim.csv  poses3real.csv  poses3sim.csv  poses4real.csv  poses4sim.csv  poses5real.csv  poses5sim.csv
static/: mc_rtc.yaml  ur10.yaml
urdf/: box013.urdf  box1.urdf  box2.urdf  box3.urdf  box4.urdf  box5.urdf  conveyor002.urdf  tote.urdf  workbench.urdf
